fixed a few alignment issues

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -141,10 +141,15 @@ h1, h2, h3, h4, h5 {
 
 .col-2-right {
 	flex-basis: 49%;
+	padding-left: 18px;
 }
 
 .middle-img {
 	margin-top: 30px;
+	width: 100%;
+}
+
+.services-header-img {
 	width: 100%;
 }
 
@@ -157,12 +162,25 @@ h1, h2, h3, h4, h5 {
 
 .col-3-left {
 	display: inline-block;
+	padding-left: 0;
 }
 
 .c-box {
 	flex-basis: 32%;
 	margin-top: 40px;
 	margin-left: 20px;
+}
+
+.c-box-left {
+	margin-left: 0;
+}
+
+.c-box-center {
+	margin-left: 30px;
+}
+
+.c-box-right {
+	margin-left: 30px;
 }
 
 .col-2-full {
